# PEP8-GoodPratices

./: pyproject.toml
src/: base_queue.py  constants.py  factory_queue.py  main.py  normal_queue.py  priority_queue.py
src/queues/: base_queue.py  factory_queue.py  normal_queue.py  priority_queue.py
src/statistics_classes/: statistic_detailed.py  statistic_summarized.py
