[tool.poetry]
name = "pep8"
version = "1"
description = "Alura course about good pratices in python"
authors = ["Daniel Pravitz"]
license = "Apache"

[tool.poetry.dependencies]
python = "3.7.4"
mypy = "^0.910"
flake8 = "^3.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
